<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".activities.Verification">
    <View
        android:id="@+id/viewSupporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_250sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <View
        android:id="@+id/viewContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/background_float"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/viewSupporter"
        />
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/verify_your_email_address"
        android:textSize="@dimen/_18ssp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="@+id/viewContainer"
        app:layout_constraintBottom_toTopOf="@id/subTitle"
        app:layout_constraintStart_toStartOf="@id/viewContainer"
        app:layout_constraintEnd_toEndOf="@id/viewContainer"
        />
    <TextView
        android:id="@+id/subTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/to_continue_secure_chat_please_verify_your_email"
        android:textSize="@dimen/_13ssp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:gravity="center"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintBottom_toTopOf="@id/verifyButton"
        app:layout_constraintStart_toStartOf="@id/viewContainer"
        app:layout_constraintEnd_toEndOf="@id/viewContainer"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/verifyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/send_email_verification"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/subTitle"
        app:layout_constraintStart_toStartOf="@+id/viewContainer"
        app:layout_constraintEnd_toEndOf="@+id/viewContainer"
        app:layout_constraintBottom_toBottomOf="@id/viewContainer"/>
    <TextView
        android:id="@+id/resendEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/resent_email"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@+id/verifyButton"
        app:layout_constraintStart_toStartOf="@+id/verifyButton"
        app:layout_constraintEnd_toEndOf="@+id/verifyButton"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>