<?xml version="1.0" encoding="utf-8"?>
 <ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    android:background="@color/background_app"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context  =".activities.SignInActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:src="@drawable/secure_talk"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/_20sdp"/>

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/secure_chat_app"
            android:textColor="@color/primary"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/login_to_continue"
            android:textColor="@color/secondary"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical"
            android:background="@drawable/background_float"
            >
            <LinearLayout
                android:weightSum="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_weight="2"
                    android:layout_height="@dimen/_45sdp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_email"
                    android:background="@drawable/background_edit_icon" />
                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_weight="8"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/background_input"
                    android:hint="@string/email"
                    android:textColorHint="@color/chat_background"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>

            <LinearLayout
                android:weightSum="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_weight="2"
                    android:layout_height="@dimen/_45sdp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_password"
                    android:background="@drawable/background_edit_icon" />
                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_weight="8"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/background_input"
                    android:hint="@string/password"
                    android:textColorHint="@color/chat_background"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:animateLayoutChanges="true">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSignIn"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    tools:cornerRadius="@dimen/_10sdp" />
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>
            </FrameLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textCreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"/>
    </LinearLayout>

</ScrollView>



