<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:background="@color/background_app"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text = "@string/create_new_account"
            android:textColor="@color/primary"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />
        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true" />

            <TextView
                android:id="@+id/textAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_image"
                android:textColor="@color/chat_background"
                android:textSize="@dimen/_10ssp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical"
            android:background="@drawable/background_float"
            >
            <LinearLayout
                android:weightSum="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_weight="2"
                    android:layout_height="@dimen/_45sdp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_username"
                    android:background="@drawable/background_edit_icon" />
                <EditText
                    android:id="@+id/inputName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_weight="8"
                    android:background="@drawable/background_input"
                    android:hint="@string/name"
                    android:textColorHint="@color/chat_background"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>

            <LinearLayout
                android:weightSum="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_weight="2"
                    android:layout_height="@dimen/_45sdp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_email"
                    android:background="@drawable/background_edit_icon" />
                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_weight="8"
                    android:background="@drawable/background_input"
                    android:hint="@string/email"
                    android:textColorHint="@color/chat_background"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>
            <LinearLayout
                android:weightSum="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_weight="2"
                    android:layout_height="@dimen/_45sdp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_password"
                    android:background="@drawable/background_edit_icon" />
                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_weight="8"
                    android:background="@drawable/background_input"
                    android:hint="@string/password"
                    android:textColorHint="@color/chat_background"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>
            <LinearLayout
                android:weightSum="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_weight="2"
                    android:layout_height="@dimen/_45sdp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_password"
                    android:background="@drawable/background_edit_icon" />
                <EditText
                    android:id="@+id/inputConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_weight="8"
                    android:background="@drawable/background_input"
                    android:hint="@string/confirm_password"
                    android:textColorHint="@color/chat_background"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSignUp"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    tools:cornerRadius="@dimen/_10sdp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>
            </FrameLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/sign_in"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/primary"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>